Fix: fixes minor bugs on contributor's page;        - aligns text to the left        - links ekehi logo to homepage      fixes minor bugs on homepage;        - links contributor button and ekehi logo to the right destination

--- a/client/css/pages/contributors.css
+++ b/client/css/pages/contributors.css
@@ -1,9 +1,9 @@
 .contributors-intro {
-  max-width: 640px;
+  max-width: 72rem;
   margin-inline: auto;
   padding-bottom: var(--space-10);
   padding-inline: var(--space-8);
-  text-align: center;
+  text-align: left;
 }
 
 .contributors-intro h1 {
