--- a/client/css/pages/landing/hero.css
+++ b/client/css/pages/landing/hero.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   padding-bottom: var(--space-16);
+  margin: auto 20px;
 }
 
 .hero-display__image {
@@ -49,9 +50,6 @@
 }
 
 @media screen and (max-width: 640px) {
-  #hero {
-    margin: 20px 20px;
-  }
   .hero-text h1 {
     font-size: var(--text-3xl);
   }
